--- a/1_programming/pandas2.ipynb
+++ b/1_programming/pandas2.ipynb
@@ -2016,10 +2016,10 @@
     "\n",
     "Symbol | Usage      | Meaning \n",
     "------ | ---------- | -------------------------------------\n",
-    "`~`    | ~p       | Returns negation of p\n",
-    "`|` | p &#124; q | p OR q\n",
-    "`&`    | p & q    | p AND q\n",
-    "`^`  | p ^ q | p XOR q (exclusive or)\n",
+    "`~`    | `~p`       | Returns negation of p\n",
+    "`\\|` | `p \\| q` | p OR q\n",
+    "`&`    | `p & q`    | p AND q\n",
+    "`^`  | `p ^ q` | p XOR q (exclusive or)\n",
     "\n",
     "When combining multiple conditions with logical operators, we surround each individual condition with a set of parenthesis `()`. This imposes an order of operations on `pandas` evaluating your logic, and can avoid code erroring.\n",
     "\n",
