--- a/1_programming/pandas3.ipynb
+++ b/1_programming/pandas3.ipynb
@@ -31,20 +31,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aggregating Data with `.groupby`\n",
+    "## Aggregation with `.groupby`\n",
     "\n",
     "Let's say we magically had baby names for all years in a single DataFrame `babynames`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Count</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mary</td>\n",
+       "      <td>F</td>\n",
+       "      <td>7065</td>\n",
+       "      <td>1880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Anna</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2604</td>\n",
+       "      <td>1880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>1880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Elizabeth</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1939</td>\n",
+       "      <td>1880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Minnie</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1746</td>\n",
+       "      <td>1880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31532</th>\n",
+       "      <td>Zyeire</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31533</th>\n",
+       "      <td>Zyel</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31534</th>\n",
+       "      <td>Zyian</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31535</th>\n",
+       "      <td>Zylar</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31536</th>\n",
+       "      <td>Zyn</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2052781 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Name Sex  Count  Year\n",
+       "0           Mary   F   7065  1880\n",
+       "1           Anna   F   2604  1880\n",
+       "2           Emma   F   2003  1880\n",
+       "3      Elizabeth   F   1939  1880\n",
+       "4         Minnie   F   1746  1880\n",
+       "...          ...  ..    ...   ...\n",
+       "31532     Zyeire   M      5  2021\n",
+       "31533       Zyel   M      5  2021\n",
+       "31534      Zyian   M      5  2021\n",
+       "31535      Zylar   M      5  2021\n",
+       "31536        Zyn   M      5  2021\n",
+       "\n",
+       "[2052781 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import urllib.request\n",
     "import os.path\n",
@@ -71,7 +203,9 @@
     "            df = pd.read_csv(fp, names=[\"Name\", \"Sex\", \"Count\"])\n",
     "            df[\"Year\"] = year\n",
     "            babynames.append(df)\n",
-    "babynames = pd.concat(babynames)"
+    "babynames = pd.concat(babynames)\n",
+    "\n",
+    "babynames"
    ]
   },
   {
@@ -84,16 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fa17b276670>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f7a30b64bb0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,13 +587,6 @@
    "source": [
     "# What is the minimum count for each name in any year?\n",
     "babynames.groupby(\"Name\")[[\"Count\"]].agg(min).head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As mentioned previously, functions from the **`NumPy` library**, such as `np.mean`, `np.max`, `np.min`, and `np.sum`, are also fair game in `pandas`."
    ]
   },
   {
@@ -957,6 +1084,16 @@
     "    return series.iloc[-1]/max(series)\n",
     "\n",
     "babynames.groupby(\"Name\")[[\"Year\", \"Count\"]].agg(ratio_to_peak)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "`lambda` functions are a special type of function that can be defined in a single line. They are also often refered to as _\"anonymous\"_ functions because these functions don't have a name. They are useful for simple functions that are not used elsewhere in your code.\n",
+    "```"
    ]
   },
   {
@@ -1913,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +2084,7 @@
        "      <th>0</th>\n",
        "      <td>A</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1971,7 +2108,7 @@
        "      <th>4</th>\n",
        "      <td>C</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1985,23 +2122,23 @@
       ],
       "text/plain": [
        "  letter  num state\n",
-       "0      A  1.0   NaN\n",
+       "0      A  1.0  None\n",
        "1      A  2.0    tx\n",
        "2      B  3.0    fl\n",
        "3      C  4.0    hi\n",
-       "4      C  NaN   NaN\n",
+       "4      C  NaN  None\n",
        "5      C  4.0    ak"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.DataFrame({'letter':['A','A','B','C','C','C'], \n",
-    "                   'num':[1,2,3,4,np.NaN,4], \n",
-    "                   'state':[np.NaN, 'tx', 'fl', 'hi', np.NaN, 'ak']})\n",
+    "                   'num':[1,2,3,4,None,4], \n",
+    "                   'state':[None, 'tx', 'fl', 'hi', None, 'ak']})\n",
     "df"
    ]
   },
@@ -2333,9 +2470,16 @@
     "\n",
     "You may ask: how is the `groupby.filter` procedure different to the boolean filtering we've seen previously? Boolean filtering considers *individual* rows when applying a boolean condition. For example, the code `elections[elections[\"%\"] < 45]` will check the `\"%\"` value of every single row in `elections`; if it is less than 45, then that row will be kept in the output. `groupby.filter`, in contrast, applies a boolean condition *across* all rows in a group. If not all rows in that group satisfy the condition specified by the filter, the entire group will be discarded in the output. \n",
     "\n",
-    "## Aggregating Data with Pivot Tables\n",
+    "## Aggregation with `.pivot_table`\n",
     "\n",
     "We know now that `.groupby` gives us the ability to group and aggregate data across our DataFrame. The examples above formed groups using just one column in the DataFrame. It's possible to group by multiple columns at once by passing in a list of column names to `.groupby`. \n",
+    "\n",
+    "```{image} https://pandas.pydata.org/docs/_images/reshaping_pivot.png\n",
+    ":width: 100%\n",
+    ":align: center\n",
+    "```\n",
+    "\n",
+    "---\n",
     "\n",
     "Let's consider the `babynames` dataset. In this problem, we will find the total number of baby names associated with each sex for each year. To do this, we'll group by *both* the `\"Year\"` and `\"Sex\"` columns.\n"
    ]
@@ -2540,7 +2684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2613,19 +2757,18 @@
        "1884  129019  114442"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# The `pivot_table` method is used to generate a Pandas pivot table\n",
-    "import numpy as np\n",
     "babynames.pivot_table(\n",
     "    index = \"Year\", \n",
     "    columns = \"Sex\", \n",
     "    values = \"Count\", \n",
-    "    aggfunc = np.sum).head(5)"
+    "    aggfunc = sum).head(5)"
    ]
   },
   {
@@ -2640,7 +2783,7 @@
     "* `index = \"Year\"` specifies the column name in the original DataFrame that should be used as the index of the pivot table\n",
     "* `columns = \"Sex\"` specifies the column name in the original DataFrame that should be used to generate the columns of the pivot table\n",
     "* `values = \"Count\"` indicates what values from the original DataFrame should be used to populate the entry for each index-column combination\n",
-    "* `aggfunc = np.sum` tells `pandas` what function to use when aggregating the data specified by `values`. Here, we are summing the name counts for each pair of `\"Year\"` and `\"Sex\"`\n",
+    "* `aggfunc = sum` tells `pandas` what function to use when aggregating the data specified by `values`. Here, we are summing the name counts for each pair of `\"Year\"` and `\"Sex\"`\n",
     "\n",
     "We can even include multiple values in the index or columns of our pivot tables."
    ]
@@ -2772,9 +2915,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Joining Tables \n",
+    "## Merging DataFrames\n",
     "\n",
-    "When working on data science projects, we're unlikely to have absolutely all the data we want contained in a single DataFrame – a real-world data scientist needs to grapple with data coming from multiple sources. If we have access to multiple datasets with related information, we can join two or more tables into a single DataFrame. \n",
+    "When working on data science projects, we're unlikely to have absolutely all the data we want contained in a single DataFrame – a real-world data scientist needs to grapple with data coming from multiple sources. If we have access to multiple datasets with related information, we can merge two or more tables into a single DataFrame. \n",
     "\n",
     "To put this into practice, we'll revisit the `elections` dataset."
    ]
@@ -2894,6 +3037,11 @@
    "metadata": {},
    "source": [
     "Say we want to understand the popularity of the names of each presidential candidate in 2020. To do this, we'll need the combined data of `babynames` *and* `elections`. \n",
+    "\n",
+    "```{image} https://pandas.pydata.org/docs/_images/merging_merge_on_key.png\n",
+    ":width: 50%\n",
+    ":align: center\n",
+    "```\n",
     "\n",
     "We'll start by creating a new column containing the first name of each presidential candidate. This will help us join each name in `elections` to the corresponding name data in `babynames`. "
    ]
@@ -3119,7 +3267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we're ready to join the two tables. [`pd.merge`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.merge.html) is the `pandas` method used to join DataFrames together."
+    "Now, we're ready to merge the two tables. [`pd.merge`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.merge.html) is the `pandas` method used to merge DataFrames together."
    ]
   },
   {
@@ -3278,8 +3426,185 @@
    "source": [
     "Let's take a closer look at the parameters:\n",
     "\n",
-    "* `left` and `right` parameters are used to specify the DataFrames to be joined.\n",
-    "* `left_on` and `right_on` parameters are assigned to the string names of the columns to be used when performing the join. These two `on` parameters tell `pandas` what values should act as pairing keys to determine which rows to merge across the DataFrames. We'll talk more about this idea of a pairing key next lecture.\n"
+    "* `left` and `right` parameters are used to specify the DataFrames to be merge.\n",
+    "* `left_on` and `right_on` parameters are assigned to the string names of the columns to be used when performing the merge. These two `on` parameters tell `pandas` what values should act as pairing keys to determine which rows to merge across the DataFrames. We'll talk more about this idea of a pairing key next lecture.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Concatenating DataFrames\n",
+    "\n",
+    "Another way to combine DataFrames is to concatenate them. Concatenation is a bit different from joining. When we join two DataFrames, we are combining them *horizontally* – that is, we are adding new columns to an existing DataFrame. Concatenation, on the other hand, is _generally_ a *vertical* operation – we are adding new rows to an existing DataFrame.\n",
+    "\n",
+    "```{image} https://pandas.pydata.org/docs/_images/merging_concat_basic.png\n",
+    ":width: 50%\n",
+    ":align: center\n",
+    "```\n",
+    "\n",
+    "`pd.concat` is the `pandas` method used to concatenate DataFrames together. It takes as input a list of DataFrames to be concatenated and returns a new DataFrame containing all of the rows from each input DataFrame in the input list."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's say we wanted to concatenate data from two different years in `babynames`. We can do so using the [`pd.concat`](https://pandas.pydata.org/docs/reference/api/pandas.concat.html) method.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>count</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mary</td>\n",
+       "      <td>F</td>\n",
+       "      <td>7065</td>\n",
+       "      <td>1880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Anna</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2604</td>\n",
+       "      <td>1880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Emma</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>1880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Elizabeth</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1939</td>\n",
+       "      <td>1880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Minnie</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1746</td>\n",
+       "      <td>1880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31910</th>\n",
+       "      <td>Zuberi</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31911</th>\n",
+       "      <td>Zydn</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31912</th>\n",
+       "      <td>Zylon</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31913</th>\n",
+       "      <td>Zymeer</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31914</th>\n",
+       "      <td>Zymeire</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2085158 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            name sex  count  year\n",
+       "0           Mary   F   7065  1880\n",
+       "1           Anna   F   2604  1880\n",
+       "2           Emma   F   2003  1880\n",
+       "3      Elizabeth   F   1939  1880\n",
+       "4         Minnie   F   1746  1880\n",
+       "...          ...  ..    ...   ...\n",
+       "31910     Zuberi   M      5  2022\n",
+       "31911       Zydn   M      5  2022\n",
+       "31912      Zylon   M      5  2022\n",
+       "31913     Zymeer   M      5  2022\n",
+       "31914    Zymeire   M      5  2022\n",
+       "\n",
+       "[2085158 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "url_template = \"https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/data/names/yob%s.txt\"\n",
+    "\n",
+    "data_list = []\n",
+    "for year in range(1880, 2023):\n",
+    "    url = url_template % year\n",
+    "    data = pd.read_csv(url, header=None, names=['name', 'sex', 'count'])\n",
+    "    data['year'] = year\n",
+    "    data_list.append(data)\n",
+    "all_data = pd.concat(data_list)\n",
+    "all_data"
    ]
   }
  ],
