--- a/1_programming/40_modalities.ipynb
+++ b/1_programming/40_modalities.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modalities of Data"
+    "# Encoding and Representation"
    ]
   },
   {
@@ -13,23 +13,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!-- \n",
-    "Modality is a term used to describe the way data is represented. For example, a single image is a 2D array of pixels. A video is a sequence of images. A sound is a 1D array of samples. A text is a sequence of characters.\n",
+    "Data exists in many forms, formats and modalities. Even missing data is a form of data. \n",
     "\n",
-    "There are too many modalities to list them all. Each modality has its own characteristics and requires different methods to process and analyze. Each data modality has its own area of research and expertise. For example, computer vision is the area of research that deals with images and videos. Speech processing is the area of research that deals with sounds. Natural language processing is the area of research that deals with text.\n",
+    "Regardless of its form, format or modality, all data ultimately needs to be transformed into a matrix (or matrices) of numbers for it to be used for any machine learning or data mining algorithm.\n",
     "\n",
-    "In this section, we will discuss the most common modalities of data and how to work with them in Python.\n",
-    "\n",
-    "The image below shows a 2D array of pixels. Each pixel is a 3D vector of RGB values. The image is 3 pixels wide and 2 pixels high. The first row of pixels is red, green, and blue. The second row of pixels is black, white, and black.\n",
-    "\n",
-    "\n",
-    "\n",
-    "Some common modalities are:\n",
-    "\n",
-    "\n",
-    "\n",
-    "There are many different ways to represent data. In this section, we will discuss the most common modalities of data and how to work with them in Python.\n",
-    " -->\n"
+    "The process of transforming raw data into numeric matrices is often referred to as **Encoding** and the resulting numeric matrices are referred to as **Representations**. These representations may focus on certain aspects (structure, content, semantics etc.) of the data more than others and may be more or less suitable for certain tasks."
    ]
   },
   {
@@ -37,24 +25,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!-- There are too many data modalities to enumerate here. \n",
-    "\n",
-    "We are going to focus on just tabular data. Mathematically, there would be matrix representations.\n",
-    "\n",
-    "Here are a few covered: \n",
-    "\n",
-    "1. **Text**: Natural Language Processing, Computational Linguistics\n",
-    "2. **Images**: Computer Vision, Digital Image Processing\n",
-    "3. **Sounds**: Digital Signal Processing (DSP)\n",
-    "4. **Graphs**: Graph Theory, Network Theory\n",
-    "5. **Time Series**: Time Series Analysis\n",
-    "6. **Geographic**: Geographic Information Systems (GIS), Spatial Computing. -->"
+    "```{figure} ../assets/modalities.png\n",
+    "---\n",
+    "width: 80%\n",
+    "name: directive-fig\n",
+    "---\n",
+    "All data is ultimately transformed into a matrix of numbers.\n",
+    "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
