--- a/1_programming/pandas2-Copy.ipynb
+++ b/1_programming/pandas2-Copy.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "4  54.574789  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4277,6 +4277,497 @@
    "source": [
     "# Sort the \"Name\" Series alphabetically\n",
     "elections[\"Candidate\"].sort_values(ascending=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Candidate</th>\n",
+       "      <th>Party</th>\n",
+       "      <th>Popular vote</th>\n",
+       "      <th>Result</th>\n",
+       "      <th>%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1824</td>\n",
+       "      <td>Andrew Jackson</td>\n",
+       "      <td>Democratic-Republican</td>\n",
+       "      <td>151271</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>57.210122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1824</td>\n",
+       "      <td>John Quincy Adams</td>\n",
+       "      <td>Democratic-Republican</td>\n",
+       "      <td>113142</td>\n",
+       "      <td>win</td>\n",
+       "      <td>42.789878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1828</td>\n",
+       "      <td>Andrew Jackson</td>\n",
+       "      <td>Democratic</td>\n",
+       "      <td>642806</td>\n",
+       "      <td>win</td>\n",
+       "      <td>56.203927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1828</td>\n",
+       "      <td>John Quincy Adams</td>\n",
+       "      <td>National Republican</td>\n",
+       "      <td>500897</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>43.796073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1832</td>\n",
+       "      <td>Andrew Jackson</td>\n",
+       "      <td>Democratic</td>\n",
+       "      <td>702735</td>\n",
+       "      <td>win</td>\n",
+       "      <td>54.574789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Jill Stein</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>1457226</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>1.073699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Joseph Biden</td>\n",
+       "      <td>Democratic</td>\n",
+       "      <td>81268924</td>\n",
+       "      <td>win</td>\n",
+       "      <td>51.311515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Donald Trump</td>\n",
+       "      <td>Republican</td>\n",
+       "      <td>74216154</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>46.858542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Jo Jorgensen</td>\n",
+       "      <td>Libertarian</td>\n",
+       "      <td>1865724</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>1.177979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Howard Hawkins</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>405035</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>0.255731</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>182 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year          Candidate                  Party  Popular vote Result  \\\n",
+       "0    1824     Andrew Jackson  Democratic-Republican        151271   loss   \n",
+       "1    1824  John Quincy Adams  Democratic-Republican        113142    win   \n",
+       "2    1828     Andrew Jackson             Democratic        642806    win   \n",
+       "3    1828  John Quincy Adams    National Republican        500897   loss   \n",
+       "4    1832     Andrew Jackson             Democratic        702735    win   \n",
+       "..    ...                ...                    ...           ...    ...   \n",
+       "177  2016         Jill Stein                  Green       1457226   loss   \n",
+       "178  2020       Joseph Biden             Democratic      81268924    win   \n",
+       "179  2020       Donald Trump             Republican      74216154   loss   \n",
+       "180  2020       Jo Jorgensen            Libertarian       1865724   loss   \n",
+       "181  2020     Howard Hawkins                  Green        405035   loss   \n",
+       "\n",
+       "             %  \n",
+       "0    57.210122  \n",
+       "1    42.789878  \n",
+       "2    56.203927  \n",
+       "3    43.796073  \n",
+       "4    54.574789  \n",
+       "..         ...  \n",
+       "177   1.073699  \n",
+       "178  51.311515  \n",
+       "179  46.858542  \n",
+       "180   1.177979  \n",
+       "181   0.255731  \n",
+       "\n",
+       "[182 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Using a loop\n",
+    "result = []\n",
+    "for i in range(len(elections)):\n",
+    "    row = elections.iloc[i]\n",
+    "    if row['Candidate'][0] == 'A':\n",
+    "        result.append(True)\n",
+    "    else:\n",
+    "        result.append(False)\n",
+    "\n",
+    "#Using apply: Vectorized version\n",
+    "def starts_with_a(row):\n",
+    "    return row['Candidate'][0] == 'A'\n",
+    "    \n",
+    "result2 = elections.apply(starts_with_a, axis=1)\n",
+    "# result # using a loop \n",
+    "elections[result2] # using apply"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Candidate</th>\n",
+       "      <th>Party</th>\n",
+       "      <th>Popular vote</th>\n",
+       "      <th>Result</th>\n",
+       "      <th>%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1824</td>\n",
+       "      <td>Andrew Jackson</td>\n",
+       "      <td>Democratic-Republican</td>\n",
+       "      <td>151271</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>57.210122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>1876</td>\n",
+       "      <td>Samuel J. Tilden</td>\n",
+       "      <td>Democratic</td>\n",
+       "      <td>4288546</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>51.528376</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year         Candidate                  Party  Popular vote Result  \\\n",
+       "0   1824    Andrew Jackson  Democratic-Republican        151271   loss   \n",
+       "34  1876  Samuel J. Tilden             Democratic       4288546   loss   \n",
+       "\n",
+       "            %  \n",
+       "0   57.210122  \n",
+       "34  51.528376  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Question: Filter out rows where a loosing candidate \n",
+    "# got >=50% of the votes\n",
+    "\n",
+    "#Version 1\n",
+    "elections[(elections['%']>=50) & (elections['Result']=='loss')]\n",
+    "\n",
+    "#Version 2\n",
+    "def some_function(row):\n",
+    "    return (row['%'] >= 50) & (row['Result']=='loss') \n",
+    "\n",
+    "# Step 1. create a boolean map which contains True if our condition\n",
+    "# is satisfied and False otherwise\n",
+    "# boolmap = \n",
+    "\n",
+    "# Step 2. filter using result of step 1\n",
+    "elections[elections.apply(some_function, axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Candidate</th>\n",
+       "      <th>Party</th>\n",
+       "      <th>Popular vote</th>\n",
+       "      <th>Result</th>\n",
+       "      <th>%</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1824</td>\n",
+       "      <td>Andrew Jackson</td>\n",
+       "      <td>Democratic-Republican</td>\n",
+       "      <td>151271</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>57.210122</td>\n",
+       "      <td>264413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1824</td>\n",
+       "      <td>John Quincy Adams</td>\n",
+       "      <td>Democratic-Republican</td>\n",
+       "      <td>113142</td>\n",
+       "      <td>win</td>\n",
+       "      <td>42.789878</td>\n",
+       "      <td>264412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1828</td>\n",
+       "      <td>Andrew Jackson</td>\n",
+       "      <td>Democratic</td>\n",
+       "      <td>642806</td>\n",
+       "      <td>win</td>\n",
+       "      <td>56.203927</td>\n",
+       "      <td>1143702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1828</td>\n",
+       "      <td>John Quincy Adams</td>\n",
+       "      <td>National Republican</td>\n",
+       "      <td>500897</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>43.796073</td>\n",
+       "      <td>1143703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1832</td>\n",
+       "      <td>Andrew Jackson</td>\n",
+       "      <td>Democratic</td>\n",
+       "      <td>702735</td>\n",
+       "      <td>win</td>\n",
+       "      <td>54.574789</td>\n",
+       "      <td>1287655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Jill Stein</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>1457226</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>1.073699</td>\n",
+       "      <td>135720167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Joseph Biden</td>\n",
+       "      <td>Democratic</td>\n",
+       "      <td>81268924</td>\n",
+       "      <td>win</td>\n",
+       "      <td>51.311515</td>\n",
+       "      <td>158383403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Donald Trump</td>\n",
+       "      <td>Republican</td>\n",
+       "      <td>74216154</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>46.858542</td>\n",
+       "      <td>158383403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Jo Jorgensen</td>\n",
+       "      <td>Libertarian</td>\n",
+       "      <td>1865724</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>1.177979</td>\n",
+       "      <td>158383401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Howard Hawkins</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>405035</td>\n",
+       "      <td>loss</td>\n",
+       "      <td>0.255731</td>\n",
+       "      <td>158383402</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>182 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year          Candidate                  Party  Popular vote Result  \\\n",
+       "0    1824     Andrew Jackson  Democratic-Republican        151271   loss   \n",
+       "1    1824  John Quincy Adams  Democratic-Republican        113142    win   \n",
+       "2    1828     Andrew Jackson             Democratic        642806    win   \n",
+       "3    1828  John Quincy Adams    National Republican        500897   loss   \n",
+       "4    1832     Andrew Jackson             Democratic        702735    win   \n",
+       "..    ...                ...                    ...           ...    ...   \n",
+       "177  2016         Jill Stein                  Green       1457226   loss   \n",
+       "178  2020       Joseph Biden             Democratic      81268924    win   \n",
+       "179  2020       Donald Trump             Republican      74216154   loss   \n",
+       "180  2020       Jo Jorgensen            Libertarian       1865724   loss   \n",
+       "181  2020     Howard Hawkins                  Green        405035   loss   \n",
+       "\n",
+       "             %      total  \n",
+       "0    57.210122     264413  \n",
+       "1    42.789878     264412  \n",
+       "2    56.203927    1143702  \n",
+       "3    43.796073    1143703  \n",
+       "4    54.574789    1287655  \n",
+       "..         ...        ...  \n",
+       "177   1.073699  135720167  \n",
+       "178  51.311515  158383403  \n",
+       "179  46.858542  158383403  \n",
+       "180   1.177979  158383401  \n",
+       "181   0.255731  158383402  \n",
+       "\n",
+       "[182 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compute_total(row):\n",
+    "    return int((row['Popular vote']*100)/row['%'])\n",
+    "\n",
+    "# elections['total'] = elections.apply(compute_total, axis=1)\n",
+    "\n",
+    "elections['total'] = elections.apply(lambda row: int((row['Popular vote']*100)/row['%']), axis=1)\n",
+    "elections"
    ]
   },
   {
