Before lecture Sept 12

--- a/1_programming/40_modalities.ipynb
+++ b/1_programming/40_modalities.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} ../assets/modalities.png\n",
+    "```{figure} https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/modalities.png\n",
     "---\n",
     "width: 80%\n",
     "name: directive-fig\n",
