--- a/1_programming/41_types.ipynb
+++ b/1_programming/41_types.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} ../assets/featuretypes.png\n",
+    "```{figure} https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/featuretypes.png\n",
     "---\n",
     "width: 100%\n",
     "name: directive-fig\n",
@@ -973,7 +973,7 @@
     "\n",
     "The figure below illustrates how one-hot encoding for a \"day\" (of the week) column: \n",
     "\n",
-    "```{figure} ../assets/ohe.png\n",
+    "```{figure} https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/ohe.png\n",
     "---\n",
     "width: 65%\n",
     "name: directive-fig\n",
