--- a/1_programming/pandas2.ipynb
+++ b/1_programming/pandas2.ipynb
@@ -691,10 +691,21 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This discussion begs the question: when should we use `.loc` vs `.iloc`? In most cases, `.loc` is generally safer to use. You can imagine `.iloc` may return incorrect values when applied to a dataset where the ordering of data can change."
+    "This discussion begs the question: when should we use `.loc` vs `.iloc`? In most cases, `.loc` is generally safer to use. You can imagine `.iloc` may return incorrect values when applied to a dataset where the ordering of data can change.\n",
+    "\n",
+    "\n",
+    "\n",
+    "```{figure} ../assets/iloc.png\n",
+    "---\n",
+    "width: 100%\n",
+    "align: center\n",
+    "---\n",
+    "`.iloc[i, j]` returns value(s) where row **location**(s)`== i` and column **location**(s)`== j` in the DataFrame.\n",
+    "``` \n"
    ]
   },
   {
@@ -1125,9 +1136,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "```{figure} ../assets/loc.png\n",
+    "---\n",
+    "width: 100%\n",
+    "align: center\n",
+    "---\n",
+    "`.loc[i, j]` returns value(s) where row **label**(s)`== i` and column **label**(s)`== j` in the DataFrame.\n",
+    "``` \n",
+    "\n",
     "### Extracting with `[]`"
    ]
   },
@@ -1447,11 +1468,21 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The output is a Series! In this course, we’ll become very comfortable with `[]`, especially for selecting columns. In practice, `[]` is much more common than `.loc`.\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "```{figure} ../assets/squarebrackets.png\n",
+    "---\n",
+    "width: 100%\n",
+    "align: center\n",
+    "---\n",
+    "`.iloc[i, j]` returns value(s) where row(s)`== i` and column(s)`== j` in the DataFrame.\n",
+    "``` \n"
    ]
   },
   {
@@ -4376,6 +4407,37 @@
     "\n",
     "elections.apply(compute_total, axis=\"columns\") # function is passed an individual row"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "```{figure} https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/axis0.png\n",
+    "---\n",
+    "width: 100%\n",
+    "align: center\n",
+    "---\n",
+    "`df.apply(f, axis=0)` results in $D$ concurrent calls to $f$. Each function call is passed a column.\n",
+    "``` \n",
+    "\n",
+    "\n",
+    "\n",
+    "```{figure} https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/axis1.png\n",
+    "---\n",
+    "width: 100%\n",
+    "align: center\n",
+    "---\n",
+    "`df.apply(f, axis=1)` results in $N$ concurrent calls to $f$. Each function call is passed a row. \n",
+    "``` \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
