--- a/1_programming/pandas3.ipynb
+++ b/1_programming/pandas3.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +8,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -27,7 +25,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,7 +206,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -329,12 +325,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "We can relate this back to the diagram we used above. Remember that the diagram uses a simplified version of `babynames`, which is why we see smaller values for the summed counts.\n",
     "\n",
-    "![Performing an aggregation](../assets/agg.png)\n",
+    "![Performing an aggregation](https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/agg.png)\n",
     "\n",
     "Calling `.agg` has condensed each subframe back into a single row. This gives us our final output: a DataFrame that is now indexed by `\"Year\"`, with a single row for each unique year in the original `babynames` DataFrame.\n",
     "\n",
@@ -1087,7 +1084,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1221,7 +1217,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1344,7 +1339,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1519,7 +1513,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1796,7 +1789,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2030,7 +2022,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2239,7 +2230,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2270,7 +2260,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2474,12 +2463,6 @@
     "\n",
     "We know now that `.groupby` gives us the ability to group and aggregate data across our DataFrame. The examples above formed groups using just one column in the DataFrame. It's possible to group by multiple columns at once by passing in a list of column names to `.groupby`. \n",
     "\n",
-    "```{image} https://pandas.pydata.org/docs/_images/reshaping_pivot.png\n",
-    ":width: 100%\n",
-    ":align: center\n",
-    "```\n",
-    "\n",
-    "---\n",
     "\n",
     "Let's consider the `babynames` dataset. In this problem, we will find the total number of baby names associated with each sex for each year. To do this, we'll group by *both* the `\"Year\"` and `\"Sex\"` columns.\n"
    ]
@@ -2669,7 +2652,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2784,6 +2766,14 @@
     "* `columns = \"Sex\"` specifies the column name in the original DataFrame that should be used to generate the columns of the pivot table\n",
     "* `values = \"Count\"` indicates what values from the original DataFrame should be used to populate the entry for each index-column combination\n",
     "* `aggfunc = sum` tells `pandas` what function to use when aggregating the data specified by `values`. Here, we are summing the name counts for each pair of `\"Year\"` and `\"Sex\"`\n",
+    "\n",
+    "```{figure} https://github.com/fahadsultan/datascience_ml/blob/main/assets/pivot.png\n",
+    "---\n",
+    "height: 400px\n",
+    "name: pivot_table\n",
+    "---\n",
+    "A pivot table is a way of summarizing data in a DataFrame for a particular purpose. It makes heavy use of the aggregation function. A pivot table is itself a DataFrame, where the rows represent one variable that you're interested in, the columns another, and the cell's some aggregate value. A pivot table also tends to include marginal values (like sums) for each row and column.\n",
+    "```\n",
     "\n",
     "We can even include multiple values in the index or columns of our pivot tables."
    ]
@@ -2911,7 +2901,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3037,11 +3026,6 @@
    "metadata": {},
    "source": [
     "Say we want to understand the popularity of the names of each presidential candidate in 2020. To do this, we'll need the combined data of `babynames` *and* `elections`. \n",
-    "\n",
-    "```{image} https://pandas.pydata.org/docs/_images/merging_merge_on_key.png\n",
-    ":width: 50%\n",
-    ":align: center\n",
-    "```\n",
     "\n",
     "We'll start by creating a new column containing the first name of each presidential candidate. This will help us join each name in `elections` to the corresponding name data in `babynames`. "
    ]
@@ -3263,7 +3247,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3427,11 +3410,33 @@
     "Let's take a closer look at the parameters:\n",
     "\n",
     "* `left` and `right` parameters are used to specify the DataFrames to be merge.\n",
-    "* `left_on` and `right_on` parameters are assigned to the string names of the columns to be used when performing the merge. These two `on` parameters tell `pandas` what values should act as pairing keys to determine which rows to merge across the DataFrames. We'll talk more about this idea of a pairing key next lecture.\n"
+    "* `left_on` and `right_on` parameters are assigned to the string names of the columns to be used when performing the merge. These two `on` parameters tell `pandas` what values should act as pairing keys to determine which rows to merge across the DataFrames. We'll talk more about this idea of a pairing key next lecture.\n",
+    "\n",
+    "\n",
+    "```{figure} https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/merge1.png\n",
+    "---\n",
+    "width: 80%\n",
+    "align: center\n",
+    "``` \n",
+    "\n",
+    "---\n",
+    "\n",
+    "```{figure} https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/merge2.png\n",
+    "---\n",
+    "width: 80%\n",
+    "align: center\n",
+    "``` \n",
+    "\n",
+    "---\n",
+    "\n",
+    "```{figure} https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/merge3.png\n",
+    "---\n",
+    "width: 80%\n",
+    "align: center\n",
+    "``` "
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3448,7 +3453,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3610,7 +3614,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3625,8 +3629,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
