--- a/1_programming/pandas1.ipynb
+++ b/1_programming/pandas1.ipynb
@@ -268,7 +268,15 @@
     "Three fundamental `pandas` data structures: **Series**, **DataFrame**, **Index**\n",
     "``` \n",
     "\n",
-    "Notice how the **DataFrame** is a two-dimensional object – it contains both rows and columns. The **Series** above is a singular column of this **DataFrame**, namely, the `Result` column. Both contain an **Index**, or a shared list of row labels (here, the integers from 0 to 4, inclusive)."
+    "Notice how the **DataFrame** is a two-dimensional object – it contains both rows and columns. The **Series** above is a singular column of this **DataFrame**, namely, the `Result` column. Both contain an **Index**, or a shared list of row labels (here, the integers from 0 to 4, inclusive).\n",
+    "\n",
+    "```{figure} https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/DataFrameSeries.png\n",
+    "---\n",
+    "width: 100%\n",
+    "align: center\n",
+    "---\n",
+    "Schematic of a `pandas` **DataFrame** and  **Series**\n",
+    "``` \n"
    ]
   },
   {
@@ -615,6 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Let’s dissect the code above.\n",
     "\n",
     "1. We first import the `pandas` library into our Python environment, using the alias `pd`.\n",
@@ -626,6 +635,25 @@
     "This code stores our DataFrame object in the `elections` variable. We see that our `elections` DataFrame has 182 rows and 6 columns (`Year`, `Candidate`, `Party`, `Popular Vote`, `Result`, `%`). Each row represents a single record – in our example, a presedential candidate from some particular year. Each column represents a single attribute, or feature of the record.\n",
     "\n",
     "In the example above, we constructed a DataFrame object using data from a CSV file. As we’ll explore in the next section, we can also create a DataFrame with data of our own.\n",
+    "\n",
+    "\n",
+    "```{figure} ../assets/df_cols.png\n",
+    "---\n",
+    "width: 100%\n",
+    "align: center\n",
+    "---\n",
+    "Each column of a `pandas` **DataFrame** `df` is a **Series** `s` where `s.index == df.index`\n",
+    "``` \n",
+    "\n",
+    "\n",
+    "```{figure} ../assets/df_rows.png\n",
+    "---\n",
+    "width: 100%\n",
+    "align: center\n",
+    "---\n",
+    "Each row of a `pandas` **DataFrame** `df` is a **Series** `s` where `s.index == df.columns`\n",
+    "``` \n",
+    "\n",
     "\n",
     "### Creating a DataFrame"
    ]
