--- a/1_programming/pandas3.ipynb
+++ b/1_programming/pandas3.ipynb
@@ -2767,7 +2767,7 @@
     "* `values = \"Count\"` indicates what values from the original DataFrame should be used to populate the entry for each index-column combination\n",
     "* `aggfunc = sum` tells `pandas` what function to use when aggregating the data specified by `values`. Here, we are summing the name counts for each pair of `\"Year\"` and `\"Sex\"`\n",
     "\n",
-    "```{figure} https://github.com/fahadsultan/datascience_ml/blob/main/assets/pivot.png\n",
+    "```{figure} https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/pivot.png\n",
     "---\n",
     "height: 400px\n",
     "name: pivot_table\n",
