Lecture on Sept 14

--- a/1_programming/41_types.ipynb
+++ b/1_programming/41_types.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 132,
    "metadata": {
     "tags": []
    },
@@ -160,7 +160,7 @@
        "4   90.0       Low Risk  Food safety certificate or food handler card n...  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
    "source": [
     "import pandas as pd \n",
     "\n",
-    "data = pd.read_csv('../data/restaurants_truncated.csv', index_col=0)\n",
+    "data = pd.read_csv('https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/data/restaurants_truncated.csv', index_col=0)\n",
     "data.head()"
    ]
   },
