--- a/1_programming/pandas3.ipynb
+++ b/1_programming/pandas3.ipynb
@@ -8,6 +8,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2260,6 +2261,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2273,6 +2275,10 @@
     "There are many other methods that `pandas` supports. You can check them out on the [`pandas` documentation](https://pandas.pydata.org/docs/reference/groupby.html).\n",
     "\n",
     "\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "<img src=\"../assets/groupby_2.png\" alt='groupby_demo' width='100%'>\n",
     "\n",
     "### Filtering by Group\n",
     "\n",
