--- a/2_maths/10_probability.ipynb
+++ b/2_maths/10_probability.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Probability and Statistics"
+    "# Probability, Stats and Logarithms"
    ]
   },
   {
